[package]
name = "ppify"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
demand = "1.7.2"
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
rosu-pp = "3.1.0"
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", branch = "lazer", features = [
	"cache",
] }
tokio = { version = "1.48.0", features = ["full"] }
